src/test/ui/pattern/usefulness/match-empty-exhaustive_patterns.stderr
error: unreachable pattern
  --> $DIR/match-empty-exhaustive_patterns.rs:21:9
   |
LL |         _ => {},
   |         ^
   |
note: lint level defined here
  --> $DIR/match-empty-exhaustive_patterns.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-empty-exhaustive_patterns.rs:29:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/match-empty-exhaustive_patterns.rs:33:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error[E0004]: non-exhaustive patterns: type `u8` is non-empty
  --> $DIR/match-empty-exhaustive_patterns.rs:36:11
   |
LL |     match 0u8 {}
   |           ^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `NonEmptyStruct` is non-empty
  --> $DIR/match-empty-exhaustive_patterns.rs:38:11
   |
LL |     match NonEmptyStruct(true) {}
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `NonEmptyEnum1` is non-empty
  --> $DIR/match-empty-exhaustive_patterns.rs:40:11
   |
LL |     match NonEmptyEnum1::Foo(true) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `NonEmptyEnum2` is non-empty
  --> $DIR/match-empty-exhaustive_patterns.rs:42:11
   |
LL |     match NonEmptyEnum2::Foo(true) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `NonEmptyEnum5` is non-empty
  --> $DIR/match-empty-exhaustive_patterns.rs:44:11
   |
LL |     match NonEmptyEnum5::V1 {}
   |           ^^^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0004`.
